<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:background="@color/dark_theme_background"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/login_main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="25dp">


        <!--App Names-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="25dp">
            <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="24sp"/>

        </LinearLayout>


        <!--Application Logo-->
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="50dp"
                android:gravity="center">

            <ImageView
                    android:id="@+id/my_image_view"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_gravity="center"
                    android:src="@drawable/vultureaid_icon"/>

        </LinearLayout>



        <!--Buttons-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="25dp"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/welcome_pg_join_us"
                    android:text="@string/join_us"
                    android:textAllCaps="false"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/gotham"
                    android:background="@drawable/buttonshape"/>

        </LinearLayout>

        <!--Go to SignUp Page-->
        <TextView
                android:textColor="@color/white"
                android:id="@+id/welcome_logIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center|bottom"
                android:text="@string/already_a_user"
                android:fontFamily="@font/gotham"
                android:textSize="16dip" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>

