<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:background="@drawable/background"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <LinearLayout
            android:id="@+id/login_main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="25dp">

        <!--Application Logo-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="0dp">

            <ImageView
                    android:id="@+id/my_image_view"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/meal_icon"/>

        </LinearLayout>

        <TextView
                android:textColor="@color/glow_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25dp"
                android:padding="30dp"
                android:text="Post a Venue"/>

        <!--Upload File-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

        </LinearLayout>

        <!--Title label and title text -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical"
                android:layout_margin="5dp">

            <EditText
                    android:textColorHint="@color/glow_green1"
                    android:id="@+id/title_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/glow_green"
                    android:layout_marginBottom="5dp"
                    android:text=""
                    android:hint="Title"/>

            <!--<Spinner-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content">-->

            <!--</Spinner>-->
            <EditText
                    android:textColorHint="@color/glow_green1"
                    android:id="@+id/location_field"
                    android:layout_width="wrap_content"
                    android:textColor="@color/glow_green"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text=""
                    android:hint="Location"/>

            <EditText
                    android:textColorHint="@color/glow_green1"
                    android:id="@+id/extra_info_field"
                    android:layout_width="match_parent"
                    android:textColor="@color/glow_green"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text=""
                    android:hint="Extra Info"/>
        </LinearLayout>

        <!-- Buttons for Post ACtivity -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

            <Button
                    android:id="@+id/photo_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/photo_button_text"
                    android:textSize="24sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/gotham"
                    android:background="@drawable/buttonshape"/>

            <Button
                    android:id="@+id/post_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/post_button_text"
                    android:textSize="24sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/gotham"
                    android:background="@drawable/buttonshape"/>

        </LinearLayout>

        <!-- Bottom Bar of three buttons -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|bottom">
            <Button
                    android:id="@+id/post_bottom_panel_nest"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nest"
                    android:textSize="24sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/gotham"
                    android:background="@drawable/buttonshape2"/>

        </LinearLayout>



    </LinearLayout>

</android.support.constraint.ConstraintLayout>